[package]
version = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
name = "rsonpath"
description = "Blazing fast JSONPath CLI tool powered by SIMD"
keywords = ["json", "jsonpath", "query", "search", "cli"]
categories = [
    "command-line-utilities",
    "text-processing",
    "parser-implementations",
]
build = "build.rs"
workspace = "../.."
rust-version = "1.89.0"

[[bin]]
bench = false
path = "./src/main.rs"
name = "rq"

[dependencies]
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.5", default-features = false }
eyre = "0.6.12"
log = { workspace = true }
rsonpath-lib = { workspace = true }
rsonpath-syntax = { workspace = true, features = ["color"] }
simple_logger = "5.1.0"

[build-dependencies]
rustflags = { version = "0.1.7" }
vergen = { version = "9.1.0", features = ["cargo", "rustc"] }
vergen-git2 = "9.1.0"

[dev-dependencies]
trycmd = "0.15.11"

[features]
default = ["simd"]
simd = ["rsonpath-lib/simd"]

[lints]
workspace = true
