[package]
name = "rsonpath-website"
version = "0.1.0"
authors = ["Georgios Chatzikyriakou"]
#add readme
license = "MIT"
repository = "https://github.com/GeoChatzik/rsonpath"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.32.0"
egui_extras = {  version = "0.32.0", features = ["all_loaders", "svg"] }
wasm-bindgen = "0.2"
rsonpath = { path = "../../crates/rsonpath" }
rfd = { version = "0.15.3", optional = true }
js-sys = "0.3.77"
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
eyre = "0.6"
strip-ansi-escapes = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Url",
    "Blob",
    "FileReader",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Event",
    "Document",
    "Window",
    "Node",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15.3"

#[lints]
#workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
incremental = true
