[package]
name = "rsonpath-website"
version = "0.1.0"
authors = ["Georgios Chatzikyriakou", "Mateusz Gienieczko <mat@gienieczko.com>"]
#add readme
license = "MIT"
repository = "https://github.com/rsonquery/rsonpath"
homepage = "https://rsonquery.github.io/web"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false, features = ["track-caller"] }
eframe = { version = "0.33.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.33.2"
egui-async = "0.2.5"
egui_extras = { version = "0.33.2", features = ["all_loaders", "svg"] }
eyre = "0.6.12"
js-sys = "0.3.83"
rsonpath = { path = "../../crates/rsonpath-lib", package = "rsonpath-lib" }
rsonpath-syntax = { path = "../../crates/rsonpath-syntax" }
wasm-bindgen = "0.2.106"
web-time = "1.1.0"

console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Blob",
    "DedicatedWorkerGlobalScope",
    "Document",
    "DomException",
    "Event",
    "FileReader",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "MessageEvent",
    "Node",
    "ProgressEvent",
    "Url",
    "Window",
    "Worker",
] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/eframe.rs"
name = "eframe"

[[bin]]
path = "src/runner.rs"
name = "runner"

[profile.release]
incremental = true
